--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
   <h1>Welcome to My Project</h1>
   <p>Select a page:</p>
 
-  <a href="studentregisteration.html">Student Registration Form</a>
+  <a href="studentregistration.html">Student Registration Form</a>
   <a href="admin.html">Admin Dashboard</a>
   <a href="banks.html">Banking UI</a>
-  <a href="live character counter.html">Live character Counter</a>
-  <a href="live product demo.html">Live product demo</a>
-  <a href="Interactive SVG Drawing Tool – Click & Drag to Draw Lines.html">Interactive SVG Drawing Tool – Click & Drag to Draw Lines</a>
-
-
+  <a href="livecharactercounter.html">Live Character Counter</a>
+  <a href="liveproductdemo.html">Live Product Demo</a>
+  <a href="svg-drawing-tool.html">SVG Drawing Tool</a>
 
 </body>
 </html>
